k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hagumi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/websocket-services: hagumi-backend-svc
spec:
  rules:
  - host: api.hagumi.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hagumi-backend-svc
            port:
              number: 80
  - host: hagumi.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hagumi-frontend-svc
            port:
              number: 80
